<resources>
    <string name="title_activity_login">Sign in</string>
    <string name="google_maps_key">AIzaSyBlWfAWc4rsaAL4il3blw9pLJ_qP1ajjSg</string>
    <string name="banner_ad_unit_id">ca-app-pub-4020702622451243/5961056047</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string-array name="InputProfile_Gender">
        <item>남자</item>
        <item>여자</item>
    </string-array>
    <string-array name="InputProfile_Age">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
    </string-array>
    <string name="Item_0_text">\'Opal\'</string>
    <string name="Item_1_text">\'Pearl\'</string>
    <string name="Item_2_text">\'Amethyst\'</string>
    <string name="Item_3_text">\'Sapphire\'</string>
    <string name="Item_4_text">\'Ruby\'</string>
    <string name="Item_5_text">\'Emerald\'</string>
    <string name="Item_6_text">\'Diamond\'</string>
    <string-array name="OpenItem_text">
        <item>클로버 소개 글</item>
        <item>다이아 소개 글</item>
        <item>하트 소개 글</item>
        <item>스페이드 소개 글</item>
        <item>잭 소개 글</item>
        <item>퀸 소개 글</item>
        <item>킹 소개 글</item>
    </string-array>
    <string-array name="MyProfire_Age">

        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>

        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>

        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>

        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>

        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>

        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>

        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>

        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
    </string-array>
    <string name="Home_Hot_Title" translatable="false">Hot50</string>
    <string name="Home_Favorite_Title" translatable="false">인기순</string>
    <string name="Home_Near_Title" translatable="false">가까운순</string>
    <string name="Home_New_Title" translatable="false">New</string>
    <string name="Fan_Rank_Title">팬 순위권 제목</string>
    <string name="Fan_Rank_1st">You became the first fan.</string>
    <string name="Fan_Rank_2nd">You became a second fan.</string>
    <string name="Fan_Rank_3rd">You became the third fan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Setting</string>
    <string name="myprofiledesc">My Settings</string>
    <string name="buyGold">Charging</string>
    <string name="myProfile">Profile</string>
    <string name="profiledesc">내프로필아이콘</string>
    <string name="myProfileLO">내프로필레이아웃</string>
    <string name="settingdesc">설정아이콘</string>
    <string name="myJewelImage">내보석이미지</string>
    <string name="recvMessage">Unsubscribe</string>
    <string name="title_activity_privacy">Privacy Statement</string>
</resources>